register (casi) terminado y login tmb

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">proyecto1</string>
+    <string name="login">Iniciar Sesión</string>
+    <string name="textView_login">Inicio de sesión</string>
+    <string name="signup">Registrarse</string>
+    <string name="textView_signup">Registrar</string>
+    <string name="email">Email</string>
+    <string name="password">Contraseña</string>
+    <string name="name">Nombre</string>
+    <string name="surname">Apellido</string>
 </resources>
